<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dodaj_produkt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="mateusz.activities.DodajProdukt"
    android:weightSum="1">

    <TextView
        android:text="@string/nazwa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/editText"
        android:layout_row="0"
        android:layout_column="0"
        android:textStyle="normal|bold"
        android:textSize="30sp" />

    <EditText
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:maxLines="2"
        android:minLines="1"
        android:text=""
        android:id="@+id/nazwa"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_row="0"
        android:layout_column="2" />

    <TextView
        android:text="@string/Składniki"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:id="@+id/textView4"
        android:layout_row="3"
        android:layout_column="0"
        android:textStyle="normal|bold"
        android:textSize="30sp" />


    <EditText
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:minLines="1"
        android:text=""
        android:id="@+id/skladniki"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_row="3"
        android:layout_column="2"
        />

    <Button
        android:id="@+id/dodaj"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_row="6"
        android:layout_column="2"
        android:text="@string/dodaj"/>

    <Button
        android:text="@string/wróć"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/wroc" />


</LinearLayout>
